k8s/devices.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devices-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devices
  template:
    metadata:
      labels:
        app: devices
    spec:
      containers:
      - name: devices-container
        image: mattyshelby/appnextjs:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: devices-service
spec:
  selector:
    app: devices
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
