k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
spec:
  # tell sevice which deployment we want to target when request come in
  selector:
    app: nextjs
  ports:
    - protocol: TCP
      port: 3000
      # targetPort: 3000
  type: NodePort
