k8s/users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
      - name: users-container
        image: mattyshelby/appnextjs:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: NodePort
