k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devices-users-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /devices
        pathType: Prefix
        backend:
          service:
            name: devices-service
            port:
              number: 8080
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: users-service
            port:
              number: 8081
